--- a/src/dailyCalender.css
+++ b/src/dailyCalender.css
@@ -1,8 +1,9 @@
 .daily-calendar-container {
   margin-top: 80px;
   justify-content: center;
-  max-width: 60%;
   margin: auto;
+  width: 800px; /* Fixed width in pixels */
+  margin: 0 auto; /* Center the container */
 }
 
 .daily-calender-header {
@@ -14,22 +15,22 @@
 }
 
 .daily-calender-header h2 {
-  color: var(--color-light);
-  font-size: 1.5rem;
-  font-family: var(--font-primary);
+  color: var(--color-white);
+  font-size: 2.5rem;
+  font-family: var(--font-heading);
   font-weight: 600;
 }
 
 .daily-calender-header button {
   cursor: pointer;
-  background-color: var(--color-bg);
-  color: var(--color-light);
+  background-color: black;
+  color: var(--color-white);
   font-size: 1rem;
   font-family: var(--font-primary);
   font-weight: 400;
   padding: 10px;
   border: 2px solid gray;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
 }
 .daily-calender-header button:hover {
   background-color: var(--color-gray);
@@ -39,33 +40,34 @@
   z-index: 3;
   position: absolute;
   color: var(--color-white);
-  padding: 120px 80px;
+  padding: 120px 40px;
+  width: 400px;
+  text-align: center;
 }
 
 .header-values {
   display: flex;
   flex-direction: row;
-  gap:1rem;
-  padding-left: 2.5rem;
-  color: var(--color-white);
-  font-size: 1.2rem;
+  gap:0.2rem;
+  color: #9595c1;
+  font-size: 1.4rem;
   font-family: var(--font-primary);
-  font-weight: 400;
+  font-weight: 300;
+  justify-content: center;
+  width: 100%;
 }
 
 .header-mainvalue {
-  font-size: 5rem;
-  font-family: var(--font-primary);
+  font-size: 5.5rem;
+  font-family: var(--font-number);
   font-weight: 400;
   padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 .header-entryprice {
   color: var(--color-white);
   font-size: 1.2rem;
   font-family: var(--font-primary);
-  font-weight: 400;
-  padding-left: 4rem;
+  font-weight: 300;
   padding-bottom: 0.5rem;
 }
 
@@ -73,16 +75,14 @@
   color: var(--color-white);
   font-size: 1.2rem;
   font-family: var(--font-primary);
-  padding-left: 4rem;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .header-date {
-  color: var(--color-light);
+  color: var(--color-white);
   font-size: 1.5rem;
   font-family: var(--font-primary);
-  font-weight: 500;
-  padding-left: 6rem;
+  font-weight: 400;
   padding-top: 4.5rem;
 }
 
@@ -107,7 +107,7 @@
   text-align: center;
   color:var(--color-red);
   font-size: 1.5rem;
-  font-family: var(--font-primary);
+  font-family: var(--font-new);
   font-weight: 600;
   padding-top: 1rem;
 }
